--- a/package.json
+++ b/package.json
@@ -49,14 +49,22 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-plugin": "latest",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
+    "@typescript-eslint/eslint-plugin": "latest",
     "commitlint": "^11.0.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-flowtype": "latest",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "latest",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
@@ -73,6 +81,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "extends": [
+      "plugin:jest/recommended"
+    ],
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
@@ -122,7 +133,8 @@
           "trailingComma": "es5",
           "useTabs": false
         }
-      ]
+      ],
+      "@typescript-eslint/no-unused-vars": "off"
     }
   },
   "eslintIgnore": [
